# yast3-partitioner

./: CMakeLists.txt  main.cpp  manywidgets.cpp
